# TP-MLOPS

./: README.md
Airbyte_dbt_dagster/airbyte_connection/: README.md  pyproject.toml  setup.cfg  setup.py
Airbyte_dbt_dagster/airbyte_connection/airbyte_connection/: assets.py  definitions.py
Airbyte_dbt_dagster/datawearehouse_dagster/: README.md  pyproject.toml  setup.cfg  setup.py
Airbyte_dbt_dagster/datawearehouse_dagster/datawearehouse_dagster/: definitions.py
