[project]
name = "airbyte_connection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9,<3.13"
dependencies = [
    "dagster",
    "dagster-cloud",
]

[project.optional-dependencies]
dev = [
    "dagster-webserver", 
    "pytest",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.dagster]
module_name = "airbyte_connection.definitions"
project_name = "airbyte_connection"

[tool.setuptools.packages.find]
exclude=["airbyte_connection_tests"]
